--- a/api/public/tailstyle.css
+++ b/api/public/tailstyle.css
@@ -570,20 +570,16 @@ video {
   margin: 1px;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
 .mb-\[400px\] {
   margin-bottom: 400px;
 }
 
-.box-border {
-  box-sizing: border-box;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
-.inline {
-  display: inline;
+.box-border {
+  box-sizing: border-box;
 }
 
 .flex {
@@ -644,24 +640,12 @@ video {
   flex-direction: column;
 }
 
-.content-between {
-  align-content: space-between;
-}
-
 .justify-end {
   justify-content: flex-end;
 }
 
 .justify-between {
   justify-content: space-between;
-}
-
-.self-start {
-  align-self: flex-start;
-}
-
-.self-end {
-  align-self: flex-end;
 }
 
 .self-center {
@@ -711,10 +695,6 @@ video {
   text-align: center;
 }
 
-.text-start {
-  text-align: start;
-}
-
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -723,11 +703,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -747,14 +722,6 @@ video {
 .ring-cyan-400 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(34 211 238 / var(--tw-ring-opacity));
-}
-
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .transition-all {
@@ -781,36 +748,6 @@ video {
 
 .\*\:m-1 > * {
   margin: 0.25rem;
-}
-
-.required\:border-red-500:required {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
-.required\:outline:required {
-  outline-style: solid;
-}
-
-.required\:outline-4:required {
-  outline-width: 4px;
-}
-
-.required\:outline-red-500:required {
-  outline-color: #ef4444;
-}
-
-.invalid\:border:invalid {
-  border-width: 1px;
-}
-
-.invalid\:border-4:invalid {
-  border-width: 4px;
-}
-
-.invalid\:border-red-500:invalid {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
 .hover\:-translate-y-1:hover {
@@ -878,15 +815,6 @@ video {
   color: rgb(16 185 129 );
 }
 
-.focus\:border-2:focus {
-  border-width: 2px;
-}
-
-.focus\:border-red-500:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -898,15 +826,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:invalid\:border-4:invalid:focus {
-  border-width: 4px;
-}
-
-.focus\:invalid\:border-red-500:invalid:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
 .focus\:invalid\:ring-red-500:invalid:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
@@ -916,19 +835,20 @@ video {
   visibility: visible;
 }
 
-.group.not-valid .group-\[\.not-valid\]\:text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
 .not-valid.group .group-\[\.not-valid\&\]\:text-red-500 {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.not-valid.group .group-\[\.not-valid\&\]\:text-yellow-400 {
+.group.not-valid .group-\[\.not-valid\]\:text-red-500 {
   --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity));
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.not-valid.group .group-\[\.not-valid\&\]\:ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .not-valid.group .group-\[\.not-valid\&\]\:ring-red-500 {
@@ -936,41 +856,7 @@ video {
   --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
 }
 
-.not-valid.peer ~ .peer-\[\.not-valid\&\]\:visible {
-  visibility: visible;
-}
-
-.not-valid.peer ~ .peer-\[\.not-valid\&\]\:text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.not-valid.peer ~ .peer-\[\.not-valid\&\]\:text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.peer.not-valid ~ .peer-\[\.not-valid\]\:text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.not-valid.peer ~ .peer-\[\.not-valid\&\]\:text-yellow-400 {
-  --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity));
-}
-
-.not-valid.peer ~ .peer-\[\.not-valid\&\]\:text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.not-valid.peer ~ .peer-\[\.not-valid\&\]\:ring-red-500 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
-}
-
-.not-valid.peer ~ .peer-\[\.not-valid\&\]\:focus\:ring-red-500:focus {
+.not-valid.group .group-\[\.not-valid\&\]\:focus\:ring-red-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(239 68 68 / var(--tw-ring-opacity));
 }
